# Banking-Data-Streaming-Pipeline

./: .env  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
banking_dbt/: dbt_project.yml
banking_dbt/models/: source.yml
banking_dbt/models/marts/dimensions/: dim_accounts.sql  dim_customers.sql
banking_dbt/models/marts/facts/: facts_transactions.sql
banking_dbt/models/staging/: staging_accounts.sql  staging_customers.sql  staging_transactions.sql
banking_dbt/snapshots/: accounts_snapshot.sql  customers_snapshot.sql
consumer/: kafka_minio.py
data-generator/: data_generator.py
docker/dags/: minio_to_snowflake_dag.py  snapshot_dag.py
docker/minio/data/.minio.sys/: format.json
docker/postgres/data/: postmaster.pid
docker/postgres/data/base/1/: 2619  2696  2840  2841
docker/postgres/data/base/16384/: 1247  1247_vm  1249  1249_fsm  1249_vm  1259  1259_vm  2579  2606  2606_vm  2608  2608_fsm  2608_vm  2610  2610_fsm  2610_vm  2656  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  6110  6111  6112  6113  (+2 more)
docker/postgres/data/base/5/: 1247  1249  1259  2224  24577  24578  24583  24585  24587  24588  24596  24603  24604  24611  2579  2604  2606  2608  2610  2610_vm  2619  2619_fsm  2619_vm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2699  (+14 more)
docker/postgres/data/global/: 1260  pg_control  pg_internal.init
docker/postgres/data/pg_xact/: 0000
kafka-debezium/: kafka_connector.py
postgres/: schema.sql
(+1 files in other folders)
