[project]
name = "banking-end-to-end-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.36",
    "dbt-snowflake>=1.11.1",
    "faker>=40.1.2",
    "fastparquet>=2025.12.0",
    "kafka-python>=2.3.0",
    "pandas>=3.0.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
